Added the base for traffic light page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<div>
-  <h1>
-    Welcome to {{ title }}
-  </h1>
-</div>
-
-<welcome></welcome>
+<navagation></navagation>
+<router-outlet></router-outlet>
