--- a/src/app/trafficLightTest.component.html
+++ b/src/app/trafficLightTest.component.html
@@ -12,10 +12,10 @@
 <div class="container" style="margin-top: 100px;">
   <div class="col-sm-12 text-left">
     <h2>
-      Welcome page - placeholder text about the traffic light test
+      Version one for traffic light test:
     </h2>
     <button class="btn btn-primary"
-            [routerLink]="['/trafficlighttest']">
+            [routerLink]="['/tltv1']">
       button
     </button>
   </div>
