--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -12,11 +12,14 @@
 <div class="container" style="margin-top: 100px;">
   <div class="col-sm-12 text-left">
     <h2>
-      Welcome page - placeholder text about the traffic light test
+      Welcome page - Title
     </h2>
+    <p>
+      Text could the traffic light test
+    </p>
     <button class="btn btn-primary"
             [routerLink]="['/trafficlighttest']">
-      button
+      Traffic light test
     </button>
   </div>
 </div>
