Improved traffic light page, added test text

--- a/src/app/failureDialog.html
+++ b/src/app/failureDialog.html
@@ -23,6 +23,15 @@
   <span *ngIf="displayMessage(3)">question4 <br>
     Text explaining why this answer resulted in the traffic light test failing <br>
   </span>
+  <span *ngIf="displayMessage(4)">question5 <br>
+    Text explaining why this answer resulted in the traffic light test failing <br>
+  </span>
+  <span *ngIf="displayMessage(5)">question6 <br>
+    Text explaining why this answer resulted in the traffic light test failing <br>
+  </span>
+  <span *ngIf="displayMessage(6)">question7 <br>
+    Text explaining why this answer resulted in the traffic light test failing <br>
+  </span>
 
 </div>
 <div mat-dialog-actions style="margin-top: 20px">
