--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -18,7 +18,7 @@
       Text could the traffic light test
     </p>
     <button class="btn btn-primary"
-            [routerLink]="['/trafficlighttest']">
+            [routerLink]="['/tltv1']">
       Traffic light test
     </button>
   </div>
