--- a/src/app/helpDialog.html
+++ b/src/app/helpDialog.html
@@ -15,6 +15,9 @@
   <span *ngIf="data.question === 'question2'">question 2 was pressed</span>
   <span *ngIf="data.question === 'question3'">question 3 was pressed</span>
   <span *ngIf="data.question === 'question4'">question 4 was pressed</span>
+  <span *ngIf="data.question === 'question5'">question 5 was pressed</span>
+  <span *ngIf="data.question === 'question6'">question 6 was pressed</span>
+  <span *ngIf="data.question === 'question7'">question 7 was pressed</span>
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Close</button>
