Improved traffic light page with question 5 only opening after question4, added questions text

--- a/src/app/helpDialog.html
+++ b/src/app/helpDialog.html
@@ -11,9 +11,10 @@
 
 <h1 mat-dialog-title>Help dialog</h1>
 <div mat-dialog-content>
-  <span *ngIf="data.question === 'question1'">question 1 was pressed</span>
+  <span *ngIf="data.question === 'question1'">Only Limited Companies are eligible for UK tax relief</span>
   <span *ngIf="data.question === 'question2'">question 2 was pressed</span>
-  <span *ngIf="data.question === 'question3'">question 3 was pressed</span>
+  <span *ngIf="data.question === 'question3'">You will not be eligible for R&D tax relief if the last day of your
+    Accounting Period is over 24 months before today’s date</span>
   <span *ngIf="data.question === 'question4'">question 4 was pressed</span>
   <span *ngIf="data.question === 'question5'">question 5 was pressed</span>
   <span *ngIf="data.question === 'question6'">question 6 was pressed</span>
