--- a/src/app/success.component.html
+++ b/src/app/success.component.html
@@ -11,6 +11,9 @@
 
 <div class="container" style="margin-top: 100px">
   <h2>
-    Traffic light success screen
+    Excellent! It looks like your business could qualify for generous HMRC tax reliefs
   </h2>
+  <button class="btn btn-primary">
+    Click to proceed with claim
+  </button>
 </div>
