Question 5 no longer is set to no as default + added a footer

--- a/src/app/tltv1.component.html
+++ b/src/app/tltv1.component.html
@@ -99,7 +99,6 @@
                  <mat-radio-button value="yes">yes</mat-radio-button>
                  <mat-radio-button value="no">no</mat-radio-button>
                </mat-radio-group>
-<!--               [(ngModel)]="question4Ans"-->
              </div>
              <div class="col">
                <mat-icon aria-hidden="false" aria-label="Example info icon"
@@ -188,3 +187,11 @@
      </div>
   </div>
 </div>
+
+<footer class="page-footer bg-primary navbar-dark">
+  <div class="row">
+    <h2 style="margin-left: 100px">
+      Footer text
+    </h2>
+  </div>
+</footer>
